# vnrs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  vnrs.rs  vnrs_ctastrategy.rs
src/vnrs/: trader.rs
src/vnrs/trader/: constant.rs  database.rs  object.rs  setting.rs  utility.rs
src/vnrs_ctastrategy/: backtesting.rs  base.rs  template.rs
