[package]
name = "vnrs"
version = "0.0.1"
edition = "2021"
description = "vnpy written in Rust"
repository = "https://github.com/wuliehan/vnrs"
license = "MIT"
authors = ["Liehan Wu <wlh9999@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4.0"
env_logger = "0.9.0"
sqlx = {version="0.7.4", features=["sqlite", "runtime-tokio", "chrono"]}
tokio = "1.38.0"
libloading = "0.8.4"
strum = {version="0.26", features=["derive"]}
rust_decimal = "1.35.0"
polars = {version="0.41.3", features=["lazy", "cum_agg", "polars-ops", "dtype-date"]}
